--- a/src/assets/scss/customs/_sidebar.scss
+++ b/src/assets/scss/customs/_sidebar.scss
@@ -91,7 +91,7 @@ div.content {
 	padding: 1px 9px;
 }
 
-/* On screens that are less than 768px wide, make the sidebar into a topbar */
+/* On screens that are less than 768px wide, make the sidebar into a Topbar */
 @media screen and (max-width: 1200px) {
 	/* .sidebar {
 		width: 100%;
