--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -1,23 +1,22 @@
 @import "variables";
-@import "~bootstrap/scss/variables";
 
 html {
-    height: 100%;
-    font-size: 16px;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
-    scroll-behavior: smooth;
+  height: 100%;
+  font-size: 16px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: $font-family-base;
-    color: #4F4F4F;
-    height: 100%;
-    position: relative;
-    line-height: 24px;
-    font-weight: 400;
-    font-size: 14px;
+  font-family: $font-family-base;
+  color: #4F4F4F;
+  height: 100%;
+  position: relative;
+  line-height: 24px;
+  font-weight: 400;
+  font-size: 14px;
 }
 
 h1,
@@ -26,197 +25,195 @@ h3,
 h4,
 h5,
 h6 {
-    font-weight: $font-weight-bold;
-    margin: 0;
+  //font-weight: $font-weight-bold;
+  margin: 0;
 }
 
 h2 {
-    font-size: 32px;
+  font-size: 32px;
 }
 
 h3 {
-    font-size: 27px;
+  font-size: 27px;
 }
 
 h4 {
-    font-size: 20px;
-    line-height: 32px;
+  font-size: 20px;
+  line-height: 32px;
 }
 
 h5 {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 h6 {
-    font-size: 16px;
-    line-height: 27px;
+  font-size: 16px;
+  line-height: 27px;
 }
 
 p {
-    margin: 0;
+  margin: 0;
 }
 
 ol,
 ul,
 dl {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 li {
-    display: block;
+  display: block;
 
-    &:focus {
-        outline: none;
-    }
+  &:focus {
+    outline: none;
+  }
 }
 
 .fw-medium {
-    font-weight: 500;
+  font-weight: 500;
 }
 
 
 .cl-dark-blue {
-    color: $app-dark-blue;
+  color: $app-dark-blue;
 
-    &:hover {
-        color: $app-dark-blue;
-    }
+  &:hover {
+    color: $app-dark-blue;
+  }
 }
 
 .cl-red {
-    color: $app-red;
+  color: $app-red;
 
-    &:hover {
-        color: $app-red;
-    }
+  &:hover {
+    color: $app-red;
+  }
 }
 
 
 .cl-basic-black {
+  color: $app-basic-black !important;
+
+  &:hover {
     color: $app-basic-black !important;
-
-    &:hover {
-        color: $app-basic-black !important;
-    }
+  }
 }
-
 
 
 .bg-white {
-    background-color: $app-white-color;
+  background-color: $app-white-color;
 }
 
 
-
 .arrow-cus {
-    cursor: pointer;
+  cursor: pointer;
+
+  &::after {
+    content: "";
+    position: relative;
+    display: inline-block;
+    width: 6.5px;
+    height: 6.5px;
+    border-right: 1.66667px solid $app-text-grey;
+    border-top: 1.66667px solid $app-text-grey;
+    transition: all 0.2s;
+  }
+
+  &.arrow-help {
 
     &::after {
-        content: "";
-        position: relative;
-        display: inline-block;
-        width: 6.5px;
-        height: 6.5px;
-        border-right: 1.66667px solid $app-text-grey;
-        border-top: 1.66667px solid $app-text-grey;
-        transition: all 0.2s;
+      border-right: 2px solid #4F4F4F;
+      border-top: 2px solid #4F4F4F;
+      left: 8px;
+      top: -2px;
     }
+  }
 
-    &.arrow-help {
-
-        &::after {
-            border-right: 2px solid #4F4F4F;
-            border-top: 2px solid #4F4F4F;
-            left: 8px;
-            top: -2px;
-        }
+  &.arrow-right-cus {
+    &::after {
+      transform: rotate(45deg);
     }
+  }
 
-    &.arrow-right-cus {
-        &::after {
-            transform: rotate(45deg);
-        }
+  &.arrow-down-cus {
+    &::after {
+      transform: rotate(135deg);
     }
+  }
 
-    &.arrow-down-cus {
-        &::after {
-            transform: rotate(135deg);
-        }
+  &.arrow-up-cus {
+    &::after {
+      transform: rotate(-45deg);
     }
-
-    &.arrow-up-cus {
-        &::after {
-            transform: rotate(-45deg);
-        }
-    }
+  }
 }
 
 
 .disabled {
-    opacity: 0.5;
+  opacity: 0.5;
 }
 
 .text-link {
+  color: $app-dark-blue;
+  text-decoration: underline;
+  cursor: pointer;
+  font-weight: bold;
+
+  &:hover {
     color: $app-dark-blue;
     text-decoration: underline;
-    cursor: pointer;
-    font-weight: bold;
-
-    &:hover {
-        color: $app-dark-blue;
-        text-decoration: underline;
-    }
+  }
 }
 
 .text-red-link {
+  color: $app-red;
+  text-decoration: none;
+  font-weight: bold;
+
+  &:hover {
     color: $app-red;
     text-decoration: none;
-    font-weight: bold;
-
-    &:hover {
-        color: $app-red;
-        text-decoration: none;
-    }
+  }
 }
 
 
 .text-dark-blue {
+  color: $app-dark-blue;
+  text-decoration: none;
+
+  &:hover {
     color: $app-dark-blue;
     text-decoration: none;
-
-    &:hover {
-        color: $app-dark-blue;
-        text-decoration: none ;
-    }
+  }
 }
 
 .text-grey1 {
+  color: $app-text-grey;
+  text-decoration: none;
+
+  &:hover {
     color: $app-text-grey;
     text-decoration: none;
-
-    &:hover {
-        color: $app-text-grey;
-        text-decoration: none ;
-    }
+  }
 }
 
 .text-grey2 {
+  color: $app-grey;
+  text-decoration: none;
+
+  &:hover {
     color: $app-grey;
     text-decoration: none;
-
-    &:hover {
-        color: $app-grey;
-        text-decoration: none ;
-    }
+  }
 }
 
 .text-underline {
-    text-decoration: underline !important;
+  text-decoration: underline !important;
 }
 
 
 .c-pointer {
-    cursor: pointer;
+  cursor: pointer;
 }
