--- a/src/assets/scss/customs/_dropdown.scss
+++ b/src/assets/scss/customs/_dropdown.scss
@@ -25,39 +25,6 @@
 		border-radius: 8px;
 		-webkit-border-radius: 10px;
 		-moz-border-radius: 10px;
-
-		&::before {
-			content: '';
-			position: absolute;
-			top: -12px;
-			right: 20px;
-			border-style: solid;
-			border-top-width: 0;
-			border-right-width: 10px;
-			border-bottom-width: 13px;
-			border-left-width: 10px;
-			border-color: white transparent;
-			box-shadow: rgba(149, 157, 165, 0.2) 0 8px 24px;
-			display: block;
-			width: 0;
-			z-index: 1;
-		}
-
-		/* &::before {
-			content: "";
-			position: absolute;
-			top: -14px;
-			right: 2px;
-			border-style: solid;
-			border-top-width: 0;
-			border-right-width: 14px;
-			border-bottom-width: 14px;
-			border-left-width: 14px;
-			border-color: #000 transparent;
-			display: block;
-			width: 0;
-			z-index: 0;
-		} */
 	}
 }
 
@@ -158,7 +125,7 @@
 			padding: 0 16px;
 			font-size: 14px;
 
-			> a {
+			>a {
 				padding: 16px 0;
 				margin: 0;
 				font-size: 14px;
@@ -171,8 +138,7 @@
 					@include activeIcon;
 
 					img {
-						filter: invert(30%) sepia(9%) saturate(4647%) hue-rotate(198deg)
-							brightness(103%) contrast(81%);
+						filter: invert(30%) sepia(9%) saturate(4647%) hue-rotate(198deg) brightness(103%) contrast(81%);
 					}
 				}
 
