--- a/src/app/views/home/Slide1/Slide1.scss
+++ b/src/app/views/home/Slide1/Slide1.scss
@@ -1,16 +1,13 @@
 @import '../../../../assets/scss/variables.scss';
 
 .carousel-slide {
-  height: 100%;
-  display: flex;
-
   .left-col {
-    display: flex;
+    // display: flex;
 
     .content {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+      // display: flex;
+      // flex-direction: column;
+      // justify-content: center;
 
       & > p:first-child {
         font-weight: bold;
@@ -37,10 +34,8 @@
 
   .right-col {
     .image-container {
-      position: relative;
 
       img {
-        width: 100%;
         object-fit: cover;
         filter: drop-shadow(0px 0px 24px rgba(0, 0, 0, 0.25));
         border-radius: 16px;
